# Menipy

./: .datatypes_migration_report_after_state_4.json  .datatypes_migration_report_after_state_5.json  .gitignore  .pre-commit-config.yaml  .tmp_import_models.py  .tmp_test_logbridge.py  AGENTS.md  CHANGELOG.md  CODEXLOG.md  CODE_CLEANUP_TRACKER.md  COMMENTS.md  CONTRIBUTING.md  DEVELOPER_QUICK_START.md  DOCUMENTATION.md  DOCUMENTATION_PROJECT_SUMMARY.md  FINAL_VERIFICATION_CHECKLIST.py  GEMINI.md  IMPORTED.md  LICENSE  Manifest.toml  NEW_PLAN.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_COMPLETION_REPORT.py  PLAN.md  PYTHONFILES.md  Project.toml  README.md  README_DOCSTRINGS.md  REFACTOR_PLAN.md  TODO.md  USERLOG.md  UnitPLAN.md  adsa_plugins.sqlite  analyze_medium_files.py  asda_droplet2.jl  asda_droplet4_fixed.jl  asda_droplet4_fixed2.jl  asda_pendant.jl  asda_sessile_fixed.jl  (+59 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-gui-resources.yml  ci.yml  lint.yml  pre-commit.yml
.tmp/: .datatypes_migration_report.json  .datatypes_migration_report_after_state.json  .datatypes_migration_report_after_state_2.json  .test_filter_report.json  .tmp_import_models.py  .tmp_test_logbridge.py  .tmp_test_pipeline.py  .tmp_test_runvm.py
archive/2026-05-cleanup/: README.md  mypy_report.txt  profile_run1.csv
data/samples/: gota pendiente 1.csv  gotapendiente-1 primer dato.csv  prueba pend 1.xlsx  prueba sesil 1.xlsx
doc/: CODEX_REFACTOR_PLAN.md  base_information.md  contact_angle_alt.md  drop_analysis.md  droplet_description.md  gui_design.md  image_processing.md  numerical_methods.md  physics_models.md
doc_audit/: REMEDIATION_GUIDE.md  summary.csv
docs/: CODEBASE_MAP.md  Makefile  adsa_ui_mockup.md  conf.py  contact_angle_methods.md  legacy_map.html  pendant_drop_methods.md  pendant_itf_models_results.md  ux_redesign2.md
docs/contracts/: adsa_annotation_dataset.md  capillary_rise_results.md  captive_bubble_results.md  onnx_segmentation_providers.md  oscillating_results.md  pendant_results.md  results_panel_integration.md  sessile_dynamic_results.md  sessile_results.md
docs/experiments/: onnx_segmentation_spike.md
docs/guides/: base_information.md  contact_angle_alt.md  contact_angle_geometry.md  developer_guide_pipelines.md  developer_guide_plugins.md  developer_guide_utilities.md  drop_analysis.md  gui_design.md  image_processing.md  numerical_methods.md  object_of_interest_description.md  physics_models.md
docs/history/: CODEXLOG.md
docs/research/: adsa_algorithm_matrix.csv  adsa_license_matrix.csv  adsa_open_source_assessment.md  adsa_open_source_evaluation_plan.md
examples/: detection_plugins_example.py
models/mobilesam/: NOTICE.md  README.md  manifest.json
plugins/: acq_file.py  auto_adaptive_edge.py  bezier_edge.py  circle_edge.py  detect_apex.py  detect_drop.py  detect_needle.py  detect_roi.py  detect_substrate.py  edge_detectors.py  geom_circle.py  image_analysis_utilities.py  optimizer_dummy.py  output_json.py  overlayer_simple.py  pendant_minimize_adsa_approximator.py  physics_dummy.py  preproc_auto_detect.py  preproc_blur.py  preproc_detect_drop.py  preproc_detect_needle.py  preproc_detect_roi.py  preproc_detect_substrate.py  scaler_identity.py  simple_solver.py  sine_edge.py  toy_young_laplace.py  validator_basic.py  young_laplace_adsa.py
savetest/: sessile_project.adsa.json
scripts/: add_gui_docstrings.py  add_stub_docstrings.py  benchmark_adsa_phase_a.py  benchmark_adsa_phase_b.py  benchmark_adsa_phase_c.py  benchmark_adsa_phase_d.py  contact_angle_detect_v2.py  contact_angle_gui.py  contact_angle_methods.py  export_mobilesam_onnx.py  find_unreferenced.py  generate_docs.py  generate_graph.py  generate_legacy_map.py  generate_recommendations.py  import_all_menipy.py  introspect_menipy.py  merge_import_maps.py  test_sessile_qt.py
scripts/archive/: AUDIT_DELIVERY.md  MATERIALS.md  PRINCIPLES.md  PRINCIPLES_GEM.md  SUMMARY_SW.md  analyze_low_files.py  analyze_phase2.py  auto_add_stubs.py  batch_document_medium.py  batch_process_low.py  captive_bubble_plan_pipeline.md  fix_over_indentation.py  pendant_detections.py  plan_DRy.md  test_sample.py  validate_phase3.py
scripts/playground/: asda_droplet.jl  asda_droplet3.jl  (+33 more)
src/: __main__.py  batch.py  contact_angle.py  main.py
src_alt/: __init__.py  __main__.py
tests/: adsa_conformance.py  adsa_geometry_conformance.py  adsa_temporal_conformance.py  conftest.py  test_adsa_detector_conformance.py  test_adsa_geometry_phase_b.py  test_alt_workflow.py  test_analysis.py  test_auto_calibrator.py  test_batch.py  test_calibration_wizard_dialog.py  test_captive_bubble.py  test_classification.py  test_cli.py  test_common_geometry_contact.py  test_common_solver.py  test_contact_angle.py  test_contact_angle_alt.py  test_contact_geom.py  test_contact_region.py  test_contour_smoothing.py  test_detection_plugins.py  test_drop_extras.py  test_drop_metrics.py  test_edge_detectors_plugin.py  test_geometry.py  test_gui.py  test_gui_resources.py  test_gui_startup_preview.py  test_guided_ui_simplification.py  test_import_health.py  test_import_map.py  test_imports.py  test_marker_config_dialog.py  test_mobilesam_onnx.py  test_models.py  test_overlay_dialog.py  test_pendant_minimal_pipeline.py  test_pendant_pipeline.py  test_phase_a_diagnostics.py  (+30 more)
tools/: audit_docstrings.py  auto_fix_d200.py  build_resources.py  check_and_filter_tests.py  check_indent.py  generate_detailed_guide.py  generate_remediation_plan.py  inspect_ui.py  migrate_datatypes_imports.py
(+398 files in other folders)
