[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menipy"
version = "0.1.0"
description = "Menipy droplet analysis tools"
readme = "README.md"
authors = [ { name = "carenaudo" } ]
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pandas>=1.5.3",
  "scikit-image>=0.19.3",
  "opencv-python>=4.7.0.72",
  "matplotlib>=3.5.0",
  "PySide6>=6.5.1",
  "pint",
  "pydantic-pint",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
menipy = "menipy.gui:main"
adsa = "menipy.cli:main"
menipy-cli = "menipy.cli:main"
menipy-plugins = "menipy.common.plugins:cli_list_plugins"

[project.urls]
"Homepage" = "https://github.com/carenaudo/Menipy"


